feat: implement jwt security, pagination and achieve 80% test coverage
- Configured SecurityFilter and TokenService with 90%+ coverage.
- Implemented pagination and bean validation in ExpenseController.
- Fixed Gradle build issues by forcing Java 21 (DhenTech Engine).
- Optimized JaCoCo reports by excluding mappers and persistence entities.
- Added edge case unit tests for authentication and mapping flows.